samples/_failures_safe/1761441234_d3d6e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a047a774.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a047a774.c:182:9: error: expected declaration or statement at end of input
  182 |         if (dist[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_a047a774.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a047a774.c:182:9: error: expected declaration or statement at end of input
